<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="411dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="301dp"
        android:text="@string/language_trainer"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/addPhrases"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:background="@drawable/main_buttons"
            android:shadowColor="#D4D4D4"
            android:shadowDx="-5"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/add_phrases"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <Button
            android:id="@+id/displayPhrases"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:background="@drawable/main_buttons"
            android:shadowColor="#D4D4D4"
            android:shadowDx="-5"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/view_all_phrases"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <Button
            android:id="@+id/editPhrases"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:background="@drawable/main_buttons"
            android:shadowColor="#D4D4D4"
            android:shadowDx="-5"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/edit_phrases"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <Button
            android:id="@+id/translate"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:background="@drawable/main_buttons"
            android:shadowColor="#D4D4D4"
            android:shadowDx="-5"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/translate"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <Button
            android:id="@+id/subscriptions"
            android:layout_width="250sp"
            android:layout_height="62dp"
            android:background="@drawable/main_buttons"
            android:shadowColor="#D4D4D4"
            android:shadowDx="-5"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/language_subscription"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <Button
            android:id="@+id/downloads"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:background="@drawable/main_buttons"
            android:shadowColor="#D4D4D4"
            android:shadowDx="-5"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/offline"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>